--- a/header.html
+++ b/header.html
@@ -19,7 +19,7 @@
         <meta name="msapplication-config" content="/favicon/browserconfig.xml">
         <meta name="theme-color" content="#004070">
 
-        <base href="stefanomurrau.github.io" target="_blank">
+        <base href="https://stefanomurrau.github.io" target="_blank">
 
         <!-- Page CSS //-->
         <link href="css/style.min.css" rel="stylesheet" />
