--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
         <main data-bs-spy="scroll" data-bs-target="#docs-list" data-bs-smooth-scroll="true" tabindex="0"></main>
     
         <!-- jQuery JS //-->
-        <script src="vendor/jquery-3.6.4.min.js"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
 
         <!-- Bootstrap JS BUNDLE //-->
-        <script src="vendor/bootstrap-5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 
         <script>
             const main = `<div class="container">
