--- a/navbar.html
+++ b/navbar.html
@@ -31,6 +31,7 @@
             </div>
 
             <script>
+                 console.log(process.env.MY_SECRET) ;
                 /*
                 This is a JavaScript function that selects all the navigation links in the navbar
                 and checks if their `href` attribute matches the value of the `page` variable. If
