--- a/navbar.html
+++ b/navbar.html
@@ -31,7 +31,7 @@
             </div>
 
             <script>
-                 console.log("QUI ---->" + token) ;
+                 console.log("QUI ---->" + process.env.token) ;
                 /*
                 This is a JavaScript function that selects all the navigation links in the navbar
                 and checks if their `href` attribute matches the value of the `page` variable. If
