--- a/navbar.html
+++ b/navbar.html
@@ -30,6 +30,8 @@
                 </div>
             </div>
 
+            <script type="text/javascript" src="env.js"></script> 
+
             <script>
                 /*
                 This is a JavaScript function that selects all the navigation links in the navbar
