--- a/navbar.html
+++ b/navbar.html
@@ -51,7 +51,7 @@
                         }
                     }) ;       
                 } ;
-
+                console.log("QUI" + token) ;
                 /*
               
                 */
