--- a/navbar.html
+++ b/navbar.html
@@ -56,7 +56,7 @@
               
                 */
                 const getRepoList = () =>{
-                    const token = "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" ;
+                    const token = "ghp_test" ;
 
                     $.ajax({
                         type: "GET",
