--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
         <input type="hidden" name="page" id="page" value="" />
 
         <nav class="navbar navbar-expand-lg" data-bs-theme="dark"></nav>
-        <main data-bs-spy="scroll" data-bs-target="#docs-list" data-bs-smooth-scroll="true" tabindex="0"></main>
+        <main data-bs-spy="scroll" data-bs-target="#docs-list" data-bs-smooth-scroll="true" tabindex="0">
+            <div style:"background-color:red; width:100%; height: 100%;"></div>
+        </main>
     
         <!-- jQuery JS //-->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.4/jquery.min.js"></script>
